bazel_dep(name = "rules_dotnet", version = "0.15.1")
bazel_dep(name = "bazel_skylib", version = "1.6.0")

dotnet = use_extension("@rules_dotnet//dotnet:extensions.bzl", "dotnet")
dotnet.toolchain(dotnet_version = "8.0.200")
use_repo(dotnet, "dotnet_toolchains")

register_toolchains("@dotnet_toolchains//:all")
