load(
    "@rules_dotnet//dotnet:defs.bzl",
    "csharp_binary",
    "csharp_library",
    "csharp_nunit_test",
)


csharp_library(
    name = "clogutils",    
    treat_warnings_as_errors = True,  # Optional: treat warnings as errors
    srcs = [
        "CLogConsoleTrace.cs",
        "CLogCustomTraceEmittorFactory.cs",
        "CLogDecodedTraceLine.cs",
        "CLogEncodingCLogTypeSearch.cs",
        "CLogEncodingType.cs",
        "CLogEnterReadOnlyModeException.cs",
        "CLogErrors.cs",
        "CLogFileProcessor.cs",
        "CLogFullyDecodedMacroEmitter.cs",
        "CLogHandledException.cs",
        "CLogLineMatch.cs",
        "CLogSidecar.cs",
        "CLogTypeNotFoundException.cs",
        "CLogTypeSearchNode.cs",
        "ICLogOutputModule.cs",
        "CodeDomHelper/Extensions.cs", 
        "CodeDomHelper/TargetFramework.cs", 
        "ConfigFile/CLogConfigurationFile.cs", 
        "ConfigFile/CLogModuleUsageInformation.cs", 
        "ConfigFile/CLogTraceLineInformation.cs", 
        "ConfigFile/CLogTypeEncoder.cs", 
        "MacroDefinations/CLogConfigurationProfile.cs", 
        "MacroDefinations/CLogExportModuleDefination.cs", 
        "MacroDefinations/CLogTraceMacroDefination.cs", 
        "MacroDefinations/CLogUniqueIDEncoder.cs"
    ],
    visibility = ["//visibility:public"],
    target_frameworks = ["net8.0"],
    deps = [
        "@paket.example_deps//newtonsoft.json",
        "@paket.example_deps//microsoft.codeanalysis.csharp",
        "@paket.example_deps//basic.reference.assemblies",
        "@paket.example_deps//microsoft.codeanalysis",
        "@paket.example_deps//system.codedom"
    ]
)
